# magic_cube2

./: CMakeLists.txt  Color.h  angle.cpp  angle.h  color.h  colored_cubelet.cpp  colored_cubelet.h  cube.cpp  cube.h  cubelet.cpp  cubelet.h  cubelet_face.cpp  cubelet_face.h  face.cpp  face.h  layer.cpp  layer.h  main.cpp  orientation.cpp  orientation.h  position.cpp  position.h  surface.cpp  surface.h
